--- a/.github/workflows/stylua.yml
+++ b/.github/workflows/stylua.yml
@@ -1,4 +1,4 @@
-name: Lua Format using stylua
+name: Lua Format
 
 on:
   push:
@@ -20,6 +20,7 @@ jobs:
       run: |
         wget https://github.com/JohnnyMorganz/StyLua/releases/download/v0.11.0/stylua-0.11.0-linux.zip
         unzip stylua-0.11.0-linux.zip
+        chmod +x stylua
         sudo mv stylua /usr/local/bin/
         rm stylua-0.11.0-linux.zip
 
