--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,6 +1,7 @@
+# .stylua.toml
 column_width = 160
 line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferSingle"
-call_parentheses = "None"
+all_parentheses = false
