--- a/.stylua.toml
+++ b/.stylua.toml
@@ -4,4 +4,4 @@ line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferSingle"
-all_parentheses = false
+no_call_parentheses = true
